[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eraseme-test-2"
version = "0.0.1"

authors = [
  { name="Lion Kimbro", email="lionkimbro+program@gmail.com" },
]

description = "I'm testing automated github repo population"

readme = "README.md"

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyperclip",
]

[project.urls]
"Homepage" = "https://github.com/LionKimbro/eraseme-test-2"
"Bug Tracker" = "https://github.com/LionKimbro/eraseme-test-2/issues"

